# extra_cluster_gap_quantum_decoder

./: .gitignore  README.md  pyproject.toml
additional_grown_decoder/: .gitignore  Cargo.toml  README.md  pyproject.toml
additional_grown_decoder/additional_grown_decoder/: __init__.py
additional_grown_decoder/src/: bounded_dijkstra.rs  dijkstra.rs  lib.rs  uf.rs  ufd.rs  ufd2.rs
additional_grown_decoder/tests/: test_softoutput.py  test_ufd.py
results/: restore_results.sh
src/: cache.py  circuit_experiment.py  generate_circuit_common.py  generate_rotated_surface_code.py  plot.py  run_experiment.py  surface_code.py  uf_rust_cln.py
