[package]
name = "additional_grown_decoder"
version = "2.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "additional_grown_decoder"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.24.0"
petgraph = "0.8.1"
radix-heap = "0.4.2"
rustc-hash = "2.1.1"
hashbrown = { version = "^0.15.0", default-features = false, features = ["default-hasher", "inline-more"] }

[dependencies.pyo3]
version = "0.24.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["extension-module", "abi3-py310"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
overflow-checks = false
debug-assertions = false
